# dm_labs_5

./: .gitignore  README.md
lab1/: .gitignore  CMakeLists.txt  README.md  TODO.md  nd4_report.docx  out.huff  stats.csv
lab1/examples/: a.txt
lab1/source/: ArgsParser.h  CLI.h  Huffman.cpp  Huffman.h  Tester.h  main.cpp
lab1/source/huffman/: HuffmanIO.cpp  HuffmanIO.h  HuffmanStringCoder.cpp  HuffmanStringCoder.h  HuffmanTree.cpp  HuffmanTree.h
lab1/source/huffman/utility/: BinaryString.cpp  BinaryString.h  BinaryStringReader.cpp  BinaryStringReader.h  CharCodeWithMeta.h  types.h
lab1/source/subclasses/: HuffmanIO.cpp  HuffmanIO.h  HuffmanStringCoder.cpp  HuffmanStringCoder.h  HuffmanTree.cpp  HuffmanTree.h
lab1/source/subclasses/utility/: BinaryString.cpp  BinaryString.h  BinaryStringReader.cpp  BinaryStringReader.h  CharCodeWithMeta.h  StringWithMeta.h  types.h
lab2/: .gitignore  CMakeLists.txt  nd4_report.docx
lab2/examples/: 1.bigraph  2.bigraph  best.bigraph  worst.bigraph
lab2/source/: BipartiteGraph.cpp  BipartiteGraph.h  CLI.h  GraphIO.cpp  GraphIO.h  main.cpp  types.h
lab3/: CMakeLists.txt  README.md  nd4_report.docx  test.graph  test.out
lab3/examples/connected_acyclic/: 2.graph  3.graph
lab3/examples/connected_cyclic/: 1.graph  2.graph  4_deprecated.graph  5.graph  6.graph
lab3/examples/disconnected_acyclic/: 2.graph
lab3/examples/disconnected_cyclic/: 1.graph  2.graph  3.graph
lab3/source/: CLI.cpp  CLI.h  Graph.cpp  Graph.h  GraphIO.cpp  GraphIO.h  main.cpp
lab3/src/: CLI.java  Graph.java  GraphIO.java  Main.java
lab4/: CMakeLists.txt  README.md  nd4_report.docx
lab4/examples/: 4.graph  7.graph  8.graph
lab4/source/: CLI.cpp  CLI.h  Graph.cpp  Graph.h  GraphIO.cpp  GraphIO.h  main.cpp
